--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,27 @@
 services:
-  running-app:
+  todo_app:
     build:
       context: .
       dockerfile: ./Dockerfile
     container_name: todo_app
-    restart: unless-stopped
+    restart: no
     ports:
       - "8080:8080"
     environment:
       CRITERIA_VERSION: 1
     env_file:
       - .env
+    depends_on:
+      - todo_postgres
+    volumes:
+      - ./:/app #mount volume for Air
 
   todo_postgres:
     image: "postgres:17.5-alpine"
     container_name: todo_postgres
     ports:
       - "5432:5432"
-    restart: unless-stopped
+    restart: no
     env_file:
       - .env
     volumes:
