--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,19 +2,17 @@ services:
   todo_app:
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ./backend/Dockerfile
     container_name: todo_app
     restart: no
     ports:
       - "8080:8080"
-    environment:
-      CRITERIA_VERSION: 1
     env_file:
       - .env
     depends_on:
       - todo_postgres
     volumes:
-      - ./:/app #mount volume for Air
+      - ./backend/:/app #mount volume for Air
 
   todo_postgres:
     image: "postgres:17.5-alpine"
@@ -25,4 +23,4 @@ services:
     env_file:
       - .env
     volumes:
-      - ./db-data/postgres/:/var/lib/postgresql/data/
+      - ./backend/db-data/postgres/:/var/lib/postgresql/data/
